Primera Tarea/Tercera entrega/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> START
Rule 1     START -> OPEN_TAG_DATA TOPICS REGIONS SITES CLOSE_TAG_DATA
Rule 2     TOPICS -> OPEN_TAG_TOPICS TOPICS_LIST CLOSE_TAG_TOPICS
Rule 3     REGIONS -> OPEN_TAG_REGIONS REGIONS_LIST CLOSE_TAG_REGIONS
Rule 4     SITES -> OPEN_TAG_SITES SITES_LIST CLOSE_TAG_SITES
Rule 5     RECORDS -> OPEN_TAG_RECORDS RECORDS_LIST CLOSE_TAG_RECORDS
Rule 6     TOPICS_LIST -> TOPIC TOPICS_LIST
Rule 7     TOPICS_LIST -> <empty>
Rule 8     REGIONS_LIST -> REGION REGIONS_LIST
Rule 9     REGIONS_LIST -> <empty>
Rule 10    SITES_LIST -> SITE SITES_LIST
Rule 11    SITES_LIST -> <empty>
Rule 12    RECORDS_LIST -> RECORD RECORDS_LIST
Rule 13    RECORDS_LIST -> <empty>
Rule 14    TOPIC -> OPEN_TAG_TOPIC TEXT CLOSE_TAG_TOPIC
Rule 15    REGION -> OPEN_TAG_REGION TEXT CLOSE_TAG_REGION
Rule 16    SITE -> OPEN_TAG_SITE URL TITLE TOPICS RECORDS CLOSE_TAG_SITE
Rule 17    RECORD -> OPEN_TAG_RECORD INITIAL_DATE FINAL_DATE REGION VISITS CLOSE_TAG_RECORD
Rule 18    URL -> OPEN_TAG_URL LINK CLOSE_TAG_URL
Rule 19    TITLE -> OPEN_TAG_TITLE TEXT CLOSE_TAG_TITLE
Rule 20    INITIAL_DATE -> OPEN_TAG_INITIAL_DATE DATE CLOSE_TAG_INITIAL_DATE
Rule 21    FINAL_DATE -> OPEN_TAG_FINAL_DATE DATE CLOSE_TAG_FINAL_DATE
Rule 22    VISITS -> OPEN_TAG_NUMBER_OF_VISITS NUMBER CLOSE_TAG_NUMBER_OF_VISITS

Terminals, with rules where they appear

CLOSE_TAG_DATA       : 1
CLOSE_TAG_FINAL_DATE : 21
CLOSE_TAG_INITIAL_DATE : 20
CLOSE_TAG_NUMBER_OF_VISITS : 22
CLOSE_TAG_RECORD     : 17
CLOSE_TAG_RECORDS    : 5
CLOSE_TAG_REGION     : 15
CLOSE_TAG_REGIONS    : 3
CLOSE_TAG_SITE       : 16
CLOSE_TAG_SITES      : 4
CLOSE_TAG_TITLE      : 19
CLOSE_TAG_TOPIC      : 14
CLOSE_TAG_TOPICS     : 2
CLOSE_TAG_URL        : 18
DATE                 : 20 21
LINK                 : 18
NUMBER               : 22
OPEN_TAG_DATA        : 1
OPEN_TAG_FINAL_DATE  : 21
OPEN_TAG_INITIAL_DATE : 20
OPEN_TAG_NUMBER_OF_VISITS : 22
OPEN_TAG_RECORD      : 17
OPEN_TAG_RECORDS     : 5
OPEN_TAG_REGION      : 15
OPEN_TAG_REGIONS     : 3
OPEN_TAG_SITE        : 16
OPEN_TAG_SITES       : 4
OPEN_TAG_TITLE       : 19
OPEN_TAG_TOPIC       : 14
OPEN_TAG_TOPICS      : 2
OPEN_TAG_URL         : 18
TEXT                 : 14 15 19
error                : 

Nonterminals, with rules where they appear

FINAL_DATE           : 17
INITIAL_DATE         : 17
RECORD               : 12
RECORDS              : 16
RECORDS_LIST         : 5 12
REGION               : 8 17
REGIONS              : 1
REGIONS_LIST         : 3 8
SITE                 : 10
SITES                : 1
SITES_LIST           : 4 10
START                : 0
TITLE                : 16
TOPIC                : 6
TOPICS               : 1 16
TOPICS_LIST          : 2 6
URL                  : 16
VISITS               : 17

Parsing method: LALR

state 0

    (0) S' -> . START
    (1) START -> . OPEN_TAG_DATA TOPICS REGIONS SITES CLOSE_TAG_DATA

    OPEN_TAG_DATA   shift and go to state 2

    START                          shift and go to state 1

state 1

    (0) S' -> START .



state 2

    (1) START -> OPEN_TAG_DATA . TOPICS REGIONS SITES CLOSE_TAG_DATA
    (2) TOPICS -> . OPEN_TAG_TOPICS TOPICS_LIST CLOSE_TAG_TOPICS

    OPEN_TAG_TOPICS shift and go to state 4

    TOPICS                         shift and go to state 3

state 3

    (1) START -> OPEN_TAG_DATA TOPICS . REGIONS SITES CLOSE_TAG_DATA
    (3) REGIONS -> . OPEN_TAG_REGIONS REGIONS_LIST CLOSE_TAG_REGIONS

    OPEN_TAG_REGIONS shift and go to state 6

    REGIONS                        shift and go to state 5

state 4

    (2) TOPICS -> OPEN_TAG_TOPICS . TOPICS_LIST CLOSE_TAG_TOPICS
    (6) TOPICS_LIST -> . TOPIC TOPICS_LIST
    (7) TOPICS_LIST -> .
    (14) TOPIC -> . OPEN_TAG_TOPIC TEXT CLOSE_TAG_TOPIC

    CLOSE_TAG_TOPICS reduce using rule 7 (TOPICS_LIST -> .)
    OPEN_TAG_TOPIC  shift and go to state 9

    TOPICS_LIST                    shift and go to state 7
    TOPIC                          shift and go to state 8

state 5

    (1) START -> OPEN_TAG_DATA TOPICS REGIONS . SITES CLOSE_TAG_DATA
    (4) SITES -> . OPEN_TAG_SITES SITES_LIST CLOSE_TAG_SITES

    OPEN_TAG_SITES  shift and go to state 11

    SITES                          shift and go to state 10

state 6

    (3) REGIONS -> OPEN_TAG_REGIONS . REGIONS_LIST CLOSE_TAG_REGIONS
    (8) REGIONS_LIST -> . REGION REGIONS_LIST
    (9) REGIONS_LIST -> .
    (15) REGION -> . OPEN_TAG_REGION TEXT CLOSE_TAG_REGION

    CLOSE_TAG_REGIONS reduce using rule 9 (REGIONS_LIST -> .)
    OPEN_TAG_REGION shift and go to state 14

    REGIONS_LIST                   shift and go to state 12
    REGION                         shift and go to state 13

state 7

    (2) TOPICS -> OPEN_TAG_TOPICS TOPICS_LIST . CLOSE_TAG_TOPICS

    CLOSE_TAG_TOPICS shift and go to state 15


state 8

    (6) TOPICS_LIST -> TOPIC . TOPICS_LIST
    (6) TOPICS_LIST -> . TOPIC TOPICS_LIST
    (7) TOPICS_LIST -> .
    (14) TOPIC -> . OPEN_TAG_TOPIC TEXT CLOSE_TAG_TOPIC

    CLOSE_TAG_TOPICS reduce using rule 7 (TOPICS_LIST -> .)
    OPEN_TAG_TOPIC  shift and go to state 9

    TOPIC                          shift and go to state 8
    TOPICS_LIST                    shift and go to state 16

state 9

    (14) TOPIC -> OPEN_TAG_TOPIC . TEXT CLOSE_TAG_TOPIC

    TEXT            shift and go to state 17


state 10

    (1) START -> OPEN_TAG_DATA TOPICS REGIONS SITES . CLOSE_TAG_DATA

    CLOSE_TAG_DATA  shift and go to state 18


state 11

    (4) SITES -> OPEN_TAG_SITES . SITES_LIST CLOSE_TAG_SITES
    (10) SITES_LIST -> . SITE SITES_LIST
    (11) SITES_LIST -> .
    (16) SITE -> . OPEN_TAG_SITE URL TITLE TOPICS RECORDS CLOSE_TAG_SITE

    CLOSE_TAG_SITES reduce using rule 11 (SITES_LIST -> .)
    OPEN_TAG_SITE   shift and go to state 21

    SITES_LIST                     shift and go to state 19
    SITE                           shift and go to state 20

state 12

    (3) REGIONS -> OPEN_TAG_REGIONS REGIONS_LIST . CLOSE_TAG_REGIONS

    CLOSE_TAG_REGIONS shift and go to state 22


state 13

    (8) REGIONS_LIST -> REGION . REGIONS_LIST
    (8) REGIONS_LIST -> . REGION REGIONS_LIST
    (9) REGIONS_LIST -> .
    (15) REGION -> . OPEN_TAG_REGION TEXT CLOSE_TAG_REGION

    CLOSE_TAG_REGIONS reduce using rule 9 (REGIONS_LIST -> .)
    OPEN_TAG_REGION shift and go to state 14

    REGION                         shift and go to state 13
    REGIONS_LIST                   shift and go to state 23

state 14

    (15) REGION -> OPEN_TAG_REGION . TEXT CLOSE_TAG_REGION

    TEXT            shift and go to state 24


state 15

    (2) TOPICS -> OPEN_TAG_TOPICS TOPICS_LIST CLOSE_TAG_TOPICS .

    OPEN_TAG_REGIONS reduce using rule 2 (TOPICS -> OPEN_TAG_TOPICS TOPICS_LIST CLOSE_TAG_TOPICS .)
    OPEN_TAG_RECORDS reduce using rule 2 (TOPICS -> OPEN_TAG_TOPICS TOPICS_LIST CLOSE_TAG_TOPICS .)


state 16

    (6) TOPICS_LIST -> TOPIC TOPICS_LIST .

    CLOSE_TAG_TOPICS reduce using rule 6 (TOPICS_LIST -> TOPIC TOPICS_LIST .)


state 17

    (14) TOPIC -> OPEN_TAG_TOPIC TEXT . CLOSE_TAG_TOPIC

    CLOSE_TAG_TOPIC shift and go to state 25


state 18

    (1) START -> OPEN_TAG_DATA TOPICS REGIONS SITES CLOSE_TAG_DATA .

    $end            reduce using rule 1 (START -> OPEN_TAG_DATA TOPICS REGIONS SITES CLOSE_TAG_DATA .)


state 19

    (4) SITES -> OPEN_TAG_SITES SITES_LIST . CLOSE_TAG_SITES

    CLOSE_TAG_SITES shift and go to state 26


state 20

    (10) SITES_LIST -> SITE . SITES_LIST
    (10) SITES_LIST -> . SITE SITES_LIST
    (11) SITES_LIST -> .
    (16) SITE -> . OPEN_TAG_SITE URL TITLE TOPICS RECORDS CLOSE_TAG_SITE

    CLOSE_TAG_SITES reduce using rule 11 (SITES_LIST -> .)
    OPEN_TAG_SITE   shift and go to state 21

    SITE                           shift and go to state 20
    SITES_LIST                     shift and go to state 27

state 21

    (16) SITE -> OPEN_TAG_SITE . URL TITLE TOPICS RECORDS CLOSE_TAG_SITE
    (18) URL -> . OPEN_TAG_URL LINK CLOSE_TAG_URL

    OPEN_TAG_URL    shift and go to state 29

    URL                            shift and go to state 28

state 22

    (3) REGIONS -> OPEN_TAG_REGIONS REGIONS_LIST CLOSE_TAG_REGIONS .

    OPEN_TAG_SITES  reduce using rule 3 (REGIONS -> OPEN_TAG_REGIONS REGIONS_LIST CLOSE_TAG_REGIONS .)


state 23

    (8) REGIONS_LIST -> REGION REGIONS_LIST .

    CLOSE_TAG_REGIONS reduce using rule 8 (REGIONS_LIST -> REGION REGIONS_LIST .)


state 24

    (15) REGION -> OPEN_TAG_REGION TEXT . CLOSE_TAG_REGION

    CLOSE_TAG_REGION shift and go to state 30


state 25

    (14) TOPIC -> OPEN_TAG_TOPIC TEXT CLOSE_TAG_TOPIC .

    OPEN_TAG_TOPIC  reduce using rule 14 (TOPIC -> OPEN_TAG_TOPIC TEXT CLOSE_TAG_TOPIC .)
    CLOSE_TAG_TOPICS reduce using rule 14 (TOPIC -> OPEN_TAG_TOPIC TEXT CLOSE_TAG_TOPIC .)


state 26

    (4) SITES -> OPEN_TAG_SITES SITES_LIST CLOSE_TAG_SITES .

    CLOSE_TAG_DATA  reduce using rule 4 (SITES -> OPEN_TAG_SITES SITES_LIST CLOSE_TAG_SITES .)


state 27

    (10) SITES_LIST -> SITE SITES_LIST .

    CLOSE_TAG_SITES reduce using rule 10 (SITES_LIST -> SITE SITES_LIST .)


state 28

    (16) SITE -> OPEN_TAG_SITE URL . TITLE TOPICS RECORDS CLOSE_TAG_SITE
    (19) TITLE -> . OPEN_TAG_TITLE TEXT CLOSE_TAG_TITLE

    OPEN_TAG_TITLE  shift and go to state 32

    TITLE                          shift and go to state 31

state 29

    (18) URL -> OPEN_TAG_URL . LINK CLOSE_TAG_URL

    LINK            shift and go to state 33


state 30

    (15) REGION -> OPEN_TAG_REGION TEXT CLOSE_TAG_REGION .

    OPEN_TAG_REGION reduce using rule 15 (REGION -> OPEN_TAG_REGION TEXT CLOSE_TAG_REGION .)
    CLOSE_TAG_REGIONS reduce using rule 15 (REGION -> OPEN_TAG_REGION TEXT CLOSE_TAG_REGION .)
    OPEN_TAG_NUMBER_OF_VISITS reduce using rule 15 (REGION -> OPEN_TAG_REGION TEXT CLOSE_TAG_REGION .)


state 31

    (16) SITE -> OPEN_TAG_SITE URL TITLE . TOPICS RECORDS CLOSE_TAG_SITE
    (2) TOPICS -> . OPEN_TAG_TOPICS TOPICS_LIST CLOSE_TAG_TOPICS

    OPEN_TAG_TOPICS shift and go to state 4

    TOPICS                         shift and go to state 34

state 32

    (19) TITLE -> OPEN_TAG_TITLE . TEXT CLOSE_TAG_TITLE

    TEXT            shift and go to state 35


state 33

    (18) URL -> OPEN_TAG_URL LINK . CLOSE_TAG_URL

    CLOSE_TAG_URL   shift and go to state 36


state 34

    (16) SITE -> OPEN_TAG_SITE URL TITLE TOPICS . RECORDS CLOSE_TAG_SITE
    (5) RECORDS -> . OPEN_TAG_RECORDS RECORDS_LIST CLOSE_TAG_RECORDS

    OPEN_TAG_RECORDS shift and go to state 38

    RECORDS                        shift and go to state 37

state 35

    (19) TITLE -> OPEN_TAG_TITLE TEXT . CLOSE_TAG_TITLE

    CLOSE_TAG_TITLE shift and go to state 39


state 36

    (18) URL -> OPEN_TAG_URL LINK CLOSE_TAG_URL .

    OPEN_TAG_TITLE  reduce using rule 18 (URL -> OPEN_TAG_URL LINK CLOSE_TAG_URL .)


state 37

    (16) SITE -> OPEN_TAG_SITE URL TITLE TOPICS RECORDS . CLOSE_TAG_SITE

    CLOSE_TAG_SITE  shift and go to state 40


state 38

    (5) RECORDS -> OPEN_TAG_RECORDS . RECORDS_LIST CLOSE_TAG_RECORDS
    (12) RECORDS_LIST -> . RECORD RECORDS_LIST
    (13) RECORDS_LIST -> .
    (17) RECORD -> . OPEN_TAG_RECORD INITIAL_DATE FINAL_DATE REGION VISITS CLOSE_TAG_RECORD

    CLOSE_TAG_RECORDS reduce using rule 13 (RECORDS_LIST -> .)
    OPEN_TAG_RECORD shift and go to state 43

    RECORDS_LIST                   shift and go to state 41
    RECORD                         shift and go to state 42

state 39

    (19) TITLE -> OPEN_TAG_TITLE TEXT CLOSE_TAG_TITLE .

    OPEN_TAG_TOPICS reduce using rule 19 (TITLE -> OPEN_TAG_TITLE TEXT CLOSE_TAG_TITLE .)


state 40

    (16) SITE -> OPEN_TAG_SITE URL TITLE TOPICS RECORDS CLOSE_TAG_SITE .

    OPEN_TAG_SITE   reduce using rule 16 (SITE -> OPEN_TAG_SITE URL TITLE TOPICS RECORDS CLOSE_TAG_SITE .)
    CLOSE_TAG_SITES reduce using rule 16 (SITE -> OPEN_TAG_SITE URL TITLE TOPICS RECORDS CLOSE_TAG_SITE .)


state 41

    (5) RECORDS -> OPEN_TAG_RECORDS RECORDS_LIST . CLOSE_TAG_RECORDS

    CLOSE_TAG_RECORDS shift and go to state 44


state 42

    (12) RECORDS_LIST -> RECORD . RECORDS_LIST
    (12) RECORDS_LIST -> . RECORD RECORDS_LIST
    (13) RECORDS_LIST -> .
    (17) RECORD -> . OPEN_TAG_RECORD INITIAL_DATE FINAL_DATE REGION VISITS CLOSE_TAG_RECORD

    CLOSE_TAG_RECORDS reduce using rule 13 (RECORDS_LIST -> .)
    OPEN_TAG_RECORD shift and go to state 43

    RECORD                         shift and go to state 42
    RECORDS_LIST                   shift and go to state 45

state 43

    (17) RECORD -> OPEN_TAG_RECORD . INITIAL_DATE FINAL_DATE REGION VISITS CLOSE_TAG_RECORD
    (20) INITIAL_DATE -> . OPEN_TAG_INITIAL_DATE DATE CLOSE_TAG_INITIAL_DATE

    OPEN_TAG_INITIAL_DATE shift and go to state 47

    INITIAL_DATE                   shift and go to state 46

state 44

    (5) RECORDS -> OPEN_TAG_RECORDS RECORDS_LIST CLOSE_TAG_RECORDS .

    CLOSE_TAG_SITE  reduce using rule 5 (RECORDS -> OPEN_TAG_RECORDS RECORDS_LIST CLOSE_TAG_RECORDS .)


state 45

    (12) RECORDS_LIST -> RECORD RECORDS_LIST .

    CLOSE_TAG_RECORDS reduce using rule 12 (RECORDS_LIST -> RECORD RECORDS_LIST .)


state 46

    (17) RECORD -> OPEN_TAG_RECORD INITIAL_DATE . FINAL_DATE REGION VISITS CLOSE_TAG_RECORD
    (21) FINAL_DATE -> . OPEN_TAG_FINAL_DATE DATE CLOSE_TAG_FINAL_DATE

    OPEN_TAG_FINAL_DATE shift and go to state 49

    FINAL_DATE                     shift and go to state 48

state 47

    (20) INITIAL_DATE -> OPEN_TAG_INITIAL_DATE . DATE CLOSE_TAG_INITIAL_DATE

    DATE            shift and go to state 50


state 48

    (17) RECORD -> OPEN_TAG_RECORD INITIAL_DATE FINAL_DATE . REGION VISITS CLOSE_TAG_RECORD
    (15) REGION -> . OPEN_TAG_REGION TEXT CLOSE_TAG_REGION

    OPEN_TAG_REGION shift and go to state 14

    REGION                         shift and go to state 51

state 49

    (21) FINAL_DATE -> OPEN_TAG_FINAL_DATE . DATE CLOSE_TAG_FINAL_DATE

    DATE            shift and go to state 52


state 50

    (20) INITIAL_DATE -> OPEN_TAG_INITIAL_DATE DATE . CLOSE_TAG_INITIAL_DATE

    CLOSE_TAG_INITIAL_DATE shift and go to state 53


state 51

    (17) RECORD -> OPEN_TAG_RECORD INITIAL_DATE FINAL_DATE REGION . VISITS CLOSE_TAG_RECORD
    (22) VISITS -> . OPEN_TAG_NUMBER_OF_VISITS NUMBER CLOSE_TAG_NUMBER_OF_VISITS

    OPEN_TAG_NUMBER_OF_VISITS shift and go to state 55

    VISITS                         shift and go to state 54

state 52

    (21) FINAL_DATE -> OPEN_TAG_FINAL_DATE DATE . CLOSE_TAG_FINAL_DATE

    CLOSE_TAG_FINAL_DATE shift and go to state 56


state 53

    (20) INITIAL_DATE -> OPEN_TAG_INITIAL_DATE DATE CLOSE_TAG_INITIAL_DATE .

    OPEN_TAG_FINAL_DATE reduce using rule 20 (INITIAL_DATE -> OPEN_TAG_INITIAL_DATE DATE CLOSE_TAG_INITIAL_DATE .)


state 54

    (17) RECORD -> OPEN_TAG_RECORD INITIAL_DATE FINAL_DATE REGION VISITS . CLOSE_TAG_RECORD

    CLOSE_TAG_RECORD shift and go to state 57


state 55

    (22) VISITS -> OPEN_TAG_NUMBER_OF_VISITS . NUMBER CLOSE_TAG_NUMBER_OF_VISITS

    NUMBER          shift and go to state 58


state 56

    (21) FINAL_DATE -> OPEN_TAG_FINAL_DATE DATE CLOSE_TAG_FINAL_DATE .

    OPEN_TAG_REGION reduce using rule 21 (FINAL_DATE -> OPEN_TAG_FINAL_DATE DATE CLOSE_TAG_FINAL_DATE .)


state 57

    (17) RECORD -> OPEN_TAG_RECORD INITIAL_DATE FINAL_DATE REGION VISITS CLOSE_TAG_RECORD .

    OPEN_TAG_RECORD reduce using rule 17 (RECORD -> OPEN_TAG_RECORD INITIAL_DATE FINAL_DATE REGION VISITS CLOSE_TAG_RECORD .)
    CLOSE_TAG_RECORDS reduce using rule 17 (RECORD -> OPEN_TAG_RECORD INITIAL_DATE FINAL_DATE REGION VISITS CLOSE_TAG_RECORD .)


state 58

    (22) VISITS -> OPEN_TAG_NUMBER_OF_VISITS NUMBER . CLOSE_TAG_NUMBER_OF_VISITS

    CLOSE_TAG_NUMBER_OF_VISITS shift and go to state 59


state 59

    (22) VISITS -> OPEN_TAG_NUMBER_OF_VISITS NUMBER CLOSE_TAG_NUMBER_OF_VISITS .

    CLOSE_TAG_RECORD reduce using rule 22 (VISITS -> OPEN_TAG_NUMBER_OF_VISITS NUMBER CLOSE_TAG_NUMBER_OF_VISITS .)

